change font on header logo and hero text, increase white space, change margins and padding, fix alignment on paragraph and icons

--- a/styles.css
+++ b/styles.css
@@ -8,22 +8,22 @@ CSS HEX
 
 FONTS
 
-font-family: 'Yeseva One', cursive;
-font-family: 'Josefin Sans', sans-serif;
-
-font-family: 'Abril fatface', cursive;
-font-family: 'Poppins', sans-serif;
-
 font-family: 'Abril Fatface', cursive;
+font-family: 'Berkshire Swash', cursive;
 font-family: 'Inconsolata', monospace;
 font-family: 'Josefin Sans', sans-serif;
 font-family: 'Karla', sans-serif;
+font-family: 'Lato', sans-serif;
 font-family: 'Merriweather', serif;
+font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif;
+font-family: 'Rubik', sans-serif;
 font-family: 'Slabo 13px', serif;
 font-family: 'Slabo 27px', serif;
 font-family: 'Ultra', serif;
 font-family: 'Yeseva One', cursive;
+
+Playfair & Lato
 
 */
 
@@ -32,6 +32,7 @@ font-family: 'Yeseva One', cursive;
 body {
   color: #595758ff;
   border-top: 10px solid #ff92c2ff;
+  border-bottom: 10px solid #ff92c2ff;
   position: relative;
 }
 
@@ -55,7 +56,7 @@ body {
   color: #595758ff;
   font-weight: lighter;
   font-size: 1.8em;
-  letter-spacing: 0.25em;
+  letter-spacing: 0.1em;
 }
 
 .icons {
@@ -80,10 +81,9 @@ body {
 }
 
 .heading-logo {
-  letter-spacing: 0.5em;
-  text-transform: uppercase;
-  font-family: "Karla", sans-serif;
+  font-family: "Berkshire Swash", cursive;
   color: #595758ff;
+  font-weight: 400;
 }
 .nav-links {
   color: grey;
@@ -103,7 +103,7 @@ body {
 .navbar a:link:hover {
   background-color: white;
   color: #595758ff;
-  padding: 26px 10px;
+  padding: 32px 10px;
 }
 
 /*ENGAGING TEXT AND IMAGE HEADER*/
@@ -112,7 +112,7 @@ body {
   border: 1px solid transparent;
   width: auto;
   height: 42em;
-
+  background-color: #ffe4f3ff;
   background-image: url("./main-cake.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
@@ -133,17 +133,20 @@ body {
 
 .engaging-text {
   color: #595758ff;
-  font-size: 10vh;
-  font-family: "Karla", sans-serif;
-  letter-spacing: 0.25em;
-  opacity: 0.8;
+  font-size: 12vh;
+  font-family: "Berkshire Swash", cursive;
+  font-weight: 400;
+  opacity: 1;
   column-gap: 0;
   text-align: center;
+  line-height: 1;
+  padding-top: 0.6em;
 }
 
 .button-container {
   margin: auto;
   text-align: center;
+  padding-bottom: 0.8em;
 }
 .menu-button {
   transition: all 0.5s ease;
@@ -156,12 +159,22 @@ body {
   color: #595758ff;
   border: 2px solid #595758ff;
   text-transform: uppercase;
+  margin-top: 1em;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .menu-button:hover {
   background-color: white;
   color: #ff92c2ff;
   font-weight: bold;
+}
+
+/*CAKE FACTS*/
+
+.cake-facts {
+  margin-bottom: 10em;
 }
 
 /*SUBHEADING*/
@@ -288,7 +301,8 @@ body {
 }
 
 .pink-text:hover {
-  color: #49393b;
+  color: black;
+  font-weight: 500;
 }
 
 .greyscale:hover {
@@ -302,13 +316,13 @@ body {
 }
 
 .footer-pink {
-  border-bottom: solid 5px #ff92c2ff;
   background-color: #ffeef2ff;
   width: 100%;
   height: 3em;
   text-align: center;
   padding-top: 1em;
   padding-bottom: 2em;
+  margin-bottom: 2em;
 }
 
 .footer-text {
